crates/module-graph/tests/snapshots/text_test__text__html.snap
---
source: crates/module-graph/tests/text_test.rs
expression: "generate_graph_for_file(sandbox.path(), \"index.html\")"
---
{
    1: Module {
        exports: [],
        fragment: None,
        id: 1,
        imports: [],
        package_name: None,
        path: "/root/index.html",
        query: None,
        source: TextModule {
            kind: Html,
            source: "<html lang=\"en\">\n    <head>\n        <meta charset=\"utf-8\" />\n        <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\" />\n    </head>\n    <body>\n        <div id=\"app\">App</div>\n    </body>\n</html>\n",
        },
    },
}
