crates/module-graph/tests/snapshots/text_test__text__stylus.snap
---
source: crates/module-graph/tests/text_test.rs
expression: "generate_graph_for_file(sandbox.path(), \"styles.styl\")"
---
{
    1: Module {
        exports: [],
        fragment: None,
        id: 1,
        imports: [],
        package_name: None,
        path: "/root/styles.styl",
        query: None,
        source: TextModule {
            kind: Stylus,
            source: "border-radius(n)\n  -webkit-border-radius n\n  -moz-border-radius n\n  border-radius n\n\nform input[type=button]\n  border-radius(5px)\n",
        },
    },
}
